# crunch

./: .gitignore  CMakeLists.txt  README.md
crunch/: bitmap.cpp  bitmap.hpp  main.cpp  packer.cpp  packer.hpp
